remove component assets task

--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
   },
   "scripts": {
     "build-component-assets": "component-assets scripts:scripts/**/*.js json:component.json",
-    "build-component-development": "npm run build-component-assets && component-build --dev --standalone tombo --name index",
-    "build-component-production": "npm run build-component-assets && component-build --standalone tombo --name tombo --out . && uglifyjs tombo.js --output tombo.min.js",
+    "build-component-development": "component-build --dev --standalone tombo --name index",
+    "build-component-production": "component-build --standalone tombo --name tombo --out . && uglifyjs tombo.js --output tombo.min.js",
     "build": "npm run build-component-production && npm run doc",
     "clean": "rm -rf build tombo.js tombo.min.js",
     "clean-deep": "rm -rf components node_modules && npm run clean",
