add a component.json to root, update .ignore and remove unused dev dependencies

--- a/package.json
+++ b/package.json
@@ -2,28 +2,12 @@
   "name": "tombo",
   "version": "0.0.0",
   "main": "scripts/index",
-  "devDependencies": {
-    "gulp": "~3.4.0",
-    "gulp-component": "~0.1.4",
-    "gulp-uglify": "~0.1.0",
-    "chai": "~1.8.1",
-    "component": "~0.17.0",
-    "jshint": "~2.3.0",
-    "jshint-stylish": "~0.1.5",
-    "LiveScript": "~1.2.0",
-    "mocha": "~1.12.0",
-    "uglify-js": "~2.4.3",
-    "yuidocjs": "~0.3.46",
-    "gulp-rename": "~0.2.2",
-    "gulp-header": "~1.0.2",
-    "gulp-watch": "~0.5.0",
-    "gulp-livescript": "~0.1.1"
-  },
+  "devDependencies": {},
   "scripts": {
     "build": "echo unimplemented",
     "documentation": "yuidoc tombo",
-    "install": "cd tombo && component install && cd ../test && npm install",
+    "install": "component-install && cd ../test && npm install",
     "lint": "jshint tombo",
-    "test": "cd test && component-serve --out out --use component-livescript"
+    "test": "cd test && npm run test"
   }
 }
