--- a/package.json
+++ b/package.json
@@ -2,12 +2,23 @@
   "name": "tombo",
   "version": "0.0.0",
   "main": "scripts/index",
-  "devDependencies": {},
+  "devDependencies": {
+    "gulp": "~3.5.6",
+    "express": "~3.4.8",
+    "component-serve": "~0.5.2",
+    "minimist": "0.0.8",
+    "event-stream": "~3.1.0",
+    "gulp-rename": "~1.2.0",
+    "gulp-uglify": "~0.2.1",
+    "gulp-header": "~1.0.2",
+    "gulp-jshint": "~1.5.0",
+    "component-jscoverage": "~0.1.0"
+  },
   "scripts": {
-    "build": "echo unimplemented",
+    "build": "gulp build --require LiveScript",
     "documentation": "yuidoc tombo",
     "install": "component-install && cd ../test && npm install",
     "lint": "jshint tombo",
-    "test": "cd test && npm run test"
+    "watch": "gulp development --require LiveScript"
   }
 }
