--- a/package.json
+++ b/package.json
@@ -5,20 +5,20 @@
   "devDependencies": {
     "gulp": "~3.5.6",
     "express": "~3.4.8",
-    "component-serve": "~0.5.2",
     "minimist": "0.0.8",
-    "event-stream": "~3.1.0",
     "gulp-rename": "~1.2.0",
     "gulp-uglify": "~0.2.1",
     "gulp-header": "~1.0.2",
     "gulp-jshint": "~1.5.0",
+    "gulp-symlink": "~0.4.1",
+    "component-serve": "~0.5.2",
     "component-jscoverage": "~0.1.0"
   },
   "scripts": {
     "build": "gulp build --require LiveScript",
-    "documentation": "yuidoc tombo",
-    "install": "component-install && cd ../test && npm install",
-    "lint": "jshint tombo",
-    "watch": "gulp development --require LiveScript"
+    "documentation": "gulp documentation --require LiveScript",
+    "install": "component-install && cd test && npm install",
+    "lint": "gulp lint --require LiveScript",
+    "test": "gulp development --require LiveScript"
   }
 }
