--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
     "gulp-header": "~1.0.2",
     "gulp-jshint": "~1.5.0",
     "gulp-symlink": "~0.4.1",
+    "gulp-yuidoc": "~0.1.1",
     "component-serve": "~0.5.2",
-    "component-jscoverage": "~0.1.0"
+    "component-jscoverage": "~0.1.0",
+    "jshint-stylish": "~0.1.5"
   },
   "scripts": {
     "build": "gulp build --require LiveScript",
+    "development": "gulp development --require LiveScript",
     "documentation": "gulp documentation --require LiveScript",
     "install": "component-install && cd test && npm install",
     "lint": "gulp lint --require LiveScript",
