--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
   "name": "tombo",
   "version": "0.0.0",
-  "main": "scripts/index",
+  "main": "index.js",
   "devDependencies": {
     "gulp": "~3.5.6",
     "express": "~3.4.8",
-    "minimist": "0.0.8",
     "gulp-rename": "~1.2.0",
     "gulp-uglify": "~0.2.1",
     "gulp-header": "~1.0.2",
